# sample_sso_cli

./: .env_sample  .gitignore  Makefile  README.md  pyproject.toml
src/: auth.py  main.py
src/commands/: api.py  sso.py
tests/: test_auth.py
